kube/poker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poker-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
