kube/poker/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: poker-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: poker.tomarrell.com
      http:
        paths:
          - backend:
              serviceName: poker-service
              servicePort: 80
